# LLM-FROM-SCRATCH-YC-MAY-2026

./: README.md  pyproject.toml
llm_from_scratch/: __init__.py  config.py  data.py  model.py  tokenizer.py
scripts/: generate.py  train.py
